# forge-db

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TECHNICAL_DEEP_DIVE.txt  deny.toml  docker-compose.yml  pgo-build.sh
.github/workflows/: ci.yml  release.yml
benches/: distance_bench.rs  e2e_bench.rs  hnsw_bench.rs  ivf_bench.rs  pq_bench.rs  search_bench.rs
docker/: forge.toml  prometheus.yml
examples/: basic_usage.rs  getting_started.rs  hnsw_recall.rs  ivf_recall.rs  measure_recall.rs  memory_usage.rs  pq_recall.rs  sift1m_benchmark.rs
forge-py/: Cargo.toml  pyproject.toml
forge-py/src/: lib.rs
forge-server/: Cargo.toml  build.rs
forge-server/proto/: forge.proto
forge-server/src/: auth.rs  collections.rs  grpc.rs  http.rs  lib.rs  main.rs  state.rs
forge-server/tests/: integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_brute_force_load.rs  fuzz_file_header.rs  fuzz_wal_replay.rs
src/: config.rs  constants.rs  dataset.rs  error.rs  kmeans.rs  lib.rs  metrics.rs  pq.rs  types.rs  vector.rs  wal.rs
src/distance/: mod.rs  scalar.rs  simd.rs
src/index/: brute_force.rs  hnsw.rs  ivf.rs  ivf_pq.rs  ivf_pq_builder.rs  mod.rs  traits.rs
src/metadata/: filter.rs  mod.rs  store.rs  value.rs
src/persistence/: format.rs  mod.rs
tests/: correctness.rs  property.rs  stress.rs
