[package]
name = "forge-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
smallvec = "1.11"

[features]
default = []
hdf5-datasets = ["hdf5"]

[dependencies.hdf5]
version = "0.8"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "ivf_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "pq_bench"
harness = false

[[example]]
name = "measure_recall"

[[example]]
name = "pq_recall"

[[example]]
name = "sift1m_benchmark"

[[example]]
name = "ivf_recall"

[[example]]
name = "hnsw_recall"
