[package]
name = "forge-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
smallvec = "1.11"
crossbeam-epoch = "0.9"
thiserror = "1.0"
crc32fast = "1.3"
roaring = "0.10"
static_assertions = "1.1"

[features]
default = []
hdf5-datasets = ["hdf5"]
# Enable AVX-512 support (requires nightly Rust)
avx512 = []

[dependencies.hdf5]
version = "0.8"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

# Profile for PGO instrumentation (generates profile data)
# Build with: cargo build --profile release-instrumented
[profile.release-instrumented]
inherits = "release"
debug = true  # Helps with profile data quality

# Profile for PGO-optimized build (uses profile data)
# Build with: RUSTFLAGS="-C profile-use=..." cargo build --profile release-pgo
[profile.release-pgo]
inherits = "release"
# Note: PGO flags are passed via RUSTFLAGS, not here

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "ivf_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "pq_bench"
harness = false

[[example]]
name = "measure_recall"

[[example]]
name = "pq_recall"

[[example]]
name = "sift1m_benchmark"

[[example]]
name = "ivf_recall"

[[example]]
name = "hnsw_recall"
