[workspace]
members = [".", "forge-server", "forge-py"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/HueCodes/forge-db"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"

[package]
name = "forge-db"
version.workspace = true
edition.workspace = true
description = "SIMD-accelerated vector database in pure Rust"
license.workspace = true
repository.workspace = true
keywords = ["vector-database", "ann", "similarity-search", "simd", "embedding"]
categories = ["database", "algorithms", "science"]

[dependencies]
rayon = "1.8"
rand = "0.8"
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
memmap2 = "0.9"
parking_lot = "0.12"
smallvec = "1.11"
crossbeam-epoch = "0.9"
thiserror = { workspace = true }
crc32fast = "1.3"
libc = "0.2"
roaring = "0.10"
static_assertions = "1.1"
tracing = { workspace = true }

[features]
default = []
hdf5-datasets = ["hdf5"]
# Enable AVX-512 support (requires nightly Rust)
avx512 = []

[dependencies.hdf5]
version = "0.8"
optional = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.10"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"

# Profile for PGO instrumentation (generates profile data)
# Build with: cargo build --profile release-instrumented
[profile.release-instrumented]
inherits = "release"
debug = true  # Helps with profile data quality

# Profile for PGO-optimized build (uses profile data)
# Build with: RUSTFLAGS="-C profile-use=..." cargo build --profile release-pgo
[profile.release-pgo]
inherits = "release"
# Note: PGO flags are passed via RUSTFLAGS, not here

[[bench]]
name = "distance_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false

[[bench]]
name = "ivf_bench"
harness = false

[[bench]]
name = "hnsw_bench"
harness = false

[[bench]]
name = "pq_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

[[example]]
name = "measure_recall"

[[example]]
name = "pq_recall"

[[example]]
name = "sift1m_benchmark"

[[example]]
name = "ivf_recall"

[[example]]
name = "hnsw_recall"

[[example]]
name = "getting_started"
path = "examples/getting_started.rs"

[[example]]
name = "memory_usage"
