[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "forge-py"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
description = "Python bindings for forge-db — SIMD-accelerated vector database"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/HueCodes/forge-db"
Repository = "https://github.com/HueCodes/forge-db"

[tool.maturin]
features = []
python-source = "python"
module-name = "forge_py._core"
