[package]
name = "forge-server"
version.workspace = true
edition.workspace = true
description = "Production gRPC + REST server for forge-db"
license.workspace = true
repository.workspace = true

[lib]
name = "forge_server"
path = "src/lib.rs"

[[bin]]
name = "forge-server"
path = "src/main.rs"

[dependencies]
forge-db = { path = ".." }

# Async runtime
tokio = { workspace = true }

# gRPC
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-reflection = "0.12"
prost = "0.13"

# HTTP / REST
axum = { version = "0.7", features = ["json", "macros"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "timeout", "limit"] }
hyper = { version = "1", features = ["full"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Config + signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Parallelism
rayon = "1.8"

# Locking
parking_lot = "0.12"

# Concurrent map
dashmap = "6"

# Crypto for API key hashing
sha2 = "0.10"
hex = "0.4"
constant_time_eq = "0.3"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
